Test compilation was fixed.