@@ -1,12 +1,9 @@
 package com.jetbrains.youtrack.db.internal.core.sql.select;
 
 import com.jetbrains.youtrack.db.internal.DbTestBase;
-import com.jetbrains.youtrack.db.api.record.Entity;
 import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -27,24 +24,21 @@ public class TestSqlEmbeddedResult extends DbTestBase {
     db.save(doc);
     db.commit();
 
-    List<Entity> res =
+    var res =
         db
             .query(
                 "select $current as el " + " from (select expand(rel.include('format')) from Test)")
-            .stream()
-            .map(result -> result.toEntity())
-            .collect(Collectors.toList());
-    Assert.assertEquals(res.size(), 1);
-    Entity ele = res.get(0);
+            .toList();
+    Assert.assertEquals(1, res.size());
+    var ele = res.getFirst();
     Assert.assertTrue(ele.getProperty("el") instanceof EntityImpl);
 
     res =
         db.query("select rel as el " + " from (select rel from Test)").stream()
-            .map(result -> result.toEntity())
             .toList();
 
-    Assert.assertEquals(res.size(), 1);
-    ele = res.get(0);
+    Assert.assertEquals(1, res.size());
+    ele = res.getFirst();
     Assert.assertTrue(ele.getProperty("el") instanceof Set<?>);
   }
 }
